-> added custom exceptions in all modules -> integrated in serviceImpls -> updated javadoc services -> added and fixed tests - coverage > 90% -> added ExceptionHandler for all RestControllers(todo: test it) -> cleanup RestControllers -> updated controllers in consoleApp